--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,15 @@ align-items:center;
 .justify-end {
   justify-content: flex-end;
 }
+.h-full {
+height:100%;
+}
+.w-full {
+  width: 100%;
+}
+.ml-auto {
+  margin-left: auto;
+}
 /* 커스텀 */
 @font-face {
  font-family: 'NanumBarunGothic';
@@ -184,7 +193,7 @@ position:absolute;
 
 /* 스크롤 */
 .scroll-wrap {
-    position: absolute;
+  position: absolute;
   top: 40vw;
   left: 85vw;
 }
@@ -273,4 +282,126 @@ position:absolute;
   to {
     transform: rotate(359deg);
   }
+}
+/* section-2 */
+.section-2-1 > img {
+  width: 18vw;
+}
+.section-2-1-txt {
+  margin-left: 50px;
+  font-size: 1.1vw;
+  margin-right: 100px;
+}
+.section-2-1 > .popup-button {
+  width: 130px;
+  height: 60px;
+  border-radius: 50px;
+  background-color: #6AAEFF;
+  margin-right: 5px;
+} 
+.section-2-1 > .popup-button::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 120px;
+  height: 60px;
+  background: #6AAEFF;
+  border-radius: 50px;
+  transform: rotate(50deg);
+    margin-left: 5px;
+  z-index:-1;
+}
+.popup-button::after {
+  content: "";
+  display: block;
+    position: absolute;
+   width: 120px;
+  height: 55px;
+  background: #6AAEFF;
+  border-radius: 50px;
+  transform: rotate(-50deg);
+  margin-left: 3px;
+    z-index:-1;
+}
+.popup-button {
+  animation: up-down 1.5s infinite linear;
+}
+
+@keyframes up-down {
+  0% {
+   margin-top: 20px;
+  }
+  50% {
+   margin-top: 0px;
+  }
+  100% {
+    margin-top: 20px;
+  }
+}
+.popup-button > p {
+  color: white;
+  font-size: 1.1rem;
+  cursor:pointer;
+}
+.popup-button > p:hover {
+  color: #363636;
+  font-weight:bold;
+}
+
+
+/* 팝업 */
+.more-popup {
+  width: 100%;
+  height:100%;
+  background-color: rgba(0,0,0,0.3);
+  position:absolute;
+  z-index:300;
+  display:none;
+}
+.in-popup {
+  width: 900px;
+  height: 600px;
+  background-color:white;
+}
+.btn-close {
+  width: 25px;
+  height: 25px;
+  position:relative;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.in-popup__head {
+  border-bottom: 1px solid black;
+}
+.btn-close::before,
+.btn-close::after {
+  content:"";
+  background-color:black;
+  position:absolute;
+  top:40%;
+  height:20%;
+  width:100%;
+  transform:rotate(45deg);
+}
+.btn-close::after {
+  transform:rotate(-45deg);
+}
+.btn-close:hover {
+  transform:rotate(3deg);
+}
+.btn-close-2 {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding:10px;
+}
+.in-popup__foot {
+  border-top:1px solid black;
+}
+
+
+.section-2-2 {
+  margin-top:50px;
+  width: 50vw;
 }
