--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,6 @@ position:absolute;
   left: 85vw;
 }
 .scroll-downs {
-
   margin: auto;
   width :34px;
   height: 55px;
@@ -543,7 +542,7 @@ position:absolute;
 .git-hub,
 .wiken,
 .process {
-  border: 1px solid black;
+  border: 1px solid #474747;
   padding: 10px;
   border-radius:30px;
   font-weight:bold;
@@ -551,12 +550,104 @@ position:absolute;
   margin-top: 20px;
   margin-left: 5px;
   margin-right:5px;
-  background-color:#ddd;
+  background-color: #ddd;
+  box-shadow: 2px 2px 2px rgb(0,0,0);
 }
 .git-hub:hover,
 .wiken:hover,
 .process:hover {
-  background-color: gray;
+  background-color: #C4DDFF;
   border: 1px solid white;
   color:white;
+}
+
+/* section-5 */
+/* section-5-1 */
+.section-5-1 {
+  margin-right: 100px;
+}
+.section-5-1 > p{
+  font-size:1.8rem;
+  font-weight:bold;
+  color: #717171;
+}
+.fa-beat {
+  animation:fa-beat 5s ease infinite;
+}
+@keyframes fa-beat {
+  0% {
+    transform:scale(2);
+  }
+  5% {
+    transform:scale(1.25);
+  }
+  20% {
+    transform:scale(2);
+  }
+  30% {
+    transform:scale(2);
+  }
+  35% {
+    transform:scale(1.25);
+  }
+  50% {
+    transform:scale(2);
+  }
+  55% {
+    transform:scale(1.25);
+  }
+  70% {
+    transform:scale(2);
+  }
+}
+.heart {
+  color:#FF5050;
+}
+
+/* section-5-2 */
+
+/* input:focus,
+textarea:focus {
+  outline: none;
+} */
+input {
+  width: 500px;
+  height:20px;
+  border: 2px solid gray;
+  border-radius: 10px;
+  padding: 10px;
+}
+textarea {
+  resize: none;
+  width: 500px;
+  height: 400px;
+  border: 2px solid gray;
+  border-radius: 10px;
+  padding: 10px;
+}
+.label-message {
+  margin:15px;
+}
+input::placeholder,
+textarea::placeholder {
+  font-weight:bold;
+  font-family: 'NanumSquareNeo-Variable';
+}
+button {
+  width: 100px;
+  height: 40px;
+  border-radius: 25px;
+  border: none;
+  cursor:pointer;
+  margin:15px;
+  font-family: 'NanumSquareNeo-Variable';
+  font-weight:bold;
+  background-color: #FFFDFA;
+  color: #5EA2FF;
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+  transition:1s;
+}
+button:hover {
+  background-color:#5EA2FF;
+  color: white;
 }
